2022-02-22  Jer Noble  <jer.noble@apple.com>

        [Cocoa] Partial rollout of r289946, broke Netflix
        https://bugs.webkit.org/show_bug.cgi?id=237019
        <rdar://89261425>

        Reviewed by Eric Carlson.

        Adopting AVContentKeySupport for AVSampleBufferDisplayLayer broke Netflix playback on Cocoa
        ports. Disable that support by hard coding sampleBufferRenderersSupportKeySession() to
        return false.

        * platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
        (WebCore::sampleBufferRenderersSupportKeySession):

2022-02-22  Tyler Wilcock  <tyler_w@apple.com>

        AX: Only compute ariaTreeRows for isTree() objects
        https://bugs.webkit.org/show_bug.cgi?id=236994

        Reviewed by Andres Gonzalez.

        We only expose AXPropertyName::ARIATreeRows for isTree() objects, but compute it for every object, which is wasteful.

        This patch also includes a drive-by fixing of setting AXPropertyName::IsTreeItem. Prior to this patch,
        we never set this property. Also, we now only store AXPropertyName::ARIATreeItemContent for isTreeItem() objects.

        The AXPropertyName::IsTreeItem fix makes test accessibility/roles-exposed.html closer to passing with ITM enabled.

        * accessibility/AccessibilityObject.cpp:
        (WebCore::AccessibilityObject::ariaTreeRows):
        Remove unncessary tab character.
        * accessibility/isolatedtree/AXIsolatedObject.cpp:
        (WebCore::AXIsolatedObject::initializeAttributeData):

2022-02-22  Tyler Wilcock  <tyler_w@apple.com>

        AX: Fix accessibility/aria-current-state-changed-notification.html in isolated tree mode
        https://bugs.webkit.org/show_bug.cgi?id=237014

        Reviewed by Chris Fleizach.

        We need to update AXPropertyName::CurrentValue when we get a AXCurrentStateChanged notification.

        Fixes accessibility/aria-current-state-changed-notification.html in isolated tree mode.
