@@ -1,3 +1,15 @@
+2022-02-22  Tim Nguyen  <ntim@apple.com>
+
+        Re-style PDF.js form fields to match PDFKit
+        https://bugs.webkit.org/show_bug.cgi?id=237041
+
+        Reviewed by Geoffrey Garen.
+
+        Remove black border on :hover, only display light blue background on hover, display blue focusring on :focus.
+
+        * Modules/pdfjs-extras/style-cocoa.css:
+        (.annotationLayer :is():
+
 2022-02-22  Jer Noble  <jer.noble@apple.com>
 
         [Cocoa] Partial rollout of r289946, broke Netflix
